--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:InzrEN+OS8nJH50wt1GgRFsi6EazIKBiV/SCtf5zSnY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
+JOB_PORTAL_URL=http://localhost:3000/
+APP_TIMEZONE=Asia/Manila
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -47,14 +49,18 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=996ae67d4bb5ab
+MAIL_PASSWORD=62c48b95e4b367
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=noreply@gmail.com
+MAIL_FROM_NAME="Job Board"
+
+MODERATOR_EMAIL=moderator@gmail.com
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -63,3 +69,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+DB_QUEUE = 'emails'
